tdf#148033: Loss of precision in /MediaBox (PDFWriterImpl::emitCatalog())

License statement provided here:
https://bugs.documentfoundation.org/show_bug.cgi?id=148033#c4

Change-Id: I93333a17d4a6a266fc25a92abf50c22cb01a2b1d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131716
(cherry picked from commit fb48a6408a515057a03c485bf00df5c34706595b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131603
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>